DigicielFull/force-app/main/default/objects/valt__Valooto_Quote_Answer__c/fields/valt__Group_Name__c.field-meta.xml
<CustomField>
    <fullName>valt__Group_Name__c</fullName>
    <label>Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>