DigicielFull/force-app/main/default/objects/valt__Valooto_Quote_Answer__c/fields/valt__Question_ID__c.field-meta.xml
<CustomField>
    <fullName>valt__Question_ID__c</fullName>
    <label>Question ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>