DigicielFull/force-app/main/default/objects/valt__Valooto_Quote_Answer__c/fields/valt__Quote__c.field-meta.xml
<CustomField>
    <fullName>valt__Quote__c</fullName>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Valooto Quote Answers</relationshipLabel>
    <relationshipName>Valooto_Quote_Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>