DigicielFull/force-app/main/default/objects/valt__Valooto_Quote_Answer__c/fields/valt__System_Name__c.field-meta.xml
<CustomField>
    <fullName>valt__System_Name__c</fullName>
    <label>System Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>